<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trackr</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="last_month" Previous="" month=""></string>
    <string name="next_month" Next="" month=""></string>

    <string-array name="month_names">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

</resources>